# mriphysio

./: DICOM_Physio.ipynb  LICENSE  README.md  conv_physiologs.py  dcm2physio.py  physio.tsv  physiobids.py  pyproject.toml  requirements.txt  setup.py
data/: ecg_resp_heartrate.tsv  physio.dcm
data/notebooks/: phaseresp.ipynb
mriphysio/: __init__.py  bidsphysio.py  conv_physiologs.py  ecg.py  epi2resp.py  phaseresp.py  physio2bids.py  physiodicom.py  test_bidsphysio.py
